--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "cookie-session": "^2.0.0-beta.3",
+    "express": "^4.16.3",
+    "mongoose": "^5.2.13",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0"
   },
-  "engines":{
-    "node" : "8.9.3",
-    "npm":"5.5.1"
+  "engines": {
+    "node": "8.9.3",
+    "npm": "5.5.1"
   }
 }
